proxy_http: don't wait for response body in a HEAD PR 41644 [Stuart Children]

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@571002 13f79535-47bb-0310-9956-ffa450edef68